# jm_datascience

./: README.md  parameters_variables.py  pyproject.toml
des/: subplots_jm_pd.ipynb  subplots_pie.ipynb
jm_datascience/: jm_pandas.py  jm_pdaccessor.py  to_series.py
jm_datascience.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_jm/: get_fdt.ipynb  infos.py  palette.ipynb  pareto.ipynb  plt_palette.ipynb  plt_pareto.ipynb  plt_pie.ipynb  show_palettes.py  sns_palette.ipynb  subplots_jm_pd.ipynb  test_charts.ipynb  test_datascience.ipynb  test_describeplus.ipynb
